<resources>
    <string name="app_name">Draw Animation</string>

    <string name="apply">Apply</string>
    <string name="language">Language</string>

    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="friench">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="russian">Russian</string>
    <string name="portuguese">Portuguese</string>
    <string name="indonesian">Indonesian</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="korean">Korean</string>


    <string name="animation">Animation</string>
    <string name="game">Game</string>
    <string name="my_creation">My Creation</string>
    <string name="my_n_creations">My\nCreations</string>

    <string name="content_intro_1">Create animation in tour own unique style with amazing tools</string>
    <string name="content_intro_2">Try this fun drawing game just for you!</string>
    <string name="content_intro_3">A place to store your masterpieces to share with friends</string>

    <string name="text_continue">Continue</string>
    <string name="start">Start</string>
    <string name="create_animation">Create Animation</string>
    <string name="content_free_style">Make an animation in your own style.</string>
    <string name="plus_create_now">+ Create now</string>
    <string name="create_now">Create now</string>
    <string name="beginner">Beginner</string>
    <string name="start_drawing">Start Drawing</string>
    <string name="stickman">Stickman</string>
    <string name="anime">Anime</string>
    <string name="animal">Animal</string>
    <string name="ball">Ball</string>
    <string name="frame">frames</string>
    <string name="report_checking">Report checking</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="clear">Clear</string>
    <string name="loading">Loading</string>
    <string name="exporting">Exporting...</string>
    <string name="export_content">Please wait, exporting is in process</string>
    <string name="create_more">Create more</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="share_animation">Share Animation</string>
    <string name="animation_speed">Animation speed</string>
    <string name="project_name">Project name</string>
    <string name="create_n_animation">Create\nAnimation</string>
    <string name="enter_project_name">Enter project name</string>
    <string name="null_name_content">This animation needs to have a name!</string>
    <string name="untitle">Untitle</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="template">Template</string>
    <string name="project">Project</string>
    <string name="sort_by">Sort by</string>
    <string name="is_save">You have saved this animation!</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_a">Z to A</string>
    <string name="setting">Settings</string>
    <string name="share_to_your_friends">Share to your friends</string>
    <string name="term_of_use">Term of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_this_animation">Delete this animation?</string>
    <string name="yes_i_m_sure">Yes, i\'m sure!</string>
    <string name="no_cancel">No, cancel</string>
    <string name="edit_name">Edit name project</string>
    <string name="done">Done</string>
    <string name="how_to_draw_animation">How to draw animation</string>
    <string name="not_draw">You have not drawed anything yet!</string>
    <string name="error">There is something wrong. Please create again!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_animation">New Animation</string>
    <string name="special">Special</string>
    <string name="txt_new">New</string>
    <string name="language_options">Language options</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_all">See all</string>
    <string name="no_work_here_go_paint_some">No work here. Go paint some ~</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="you_are_in_the_process_of_creating_a_project">You are in the process of creating a project</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="yayyy">Yayyy</string>
    <string name="duck_jump">Duck Jump</string>
    <string name="sun_rise">Sun rise</string>
    <string name="straw_berry">Straw Berry</string>
    <string name="jumping_ball">Jumping Ball</string>
    <string name="cute_bee">Cute Bee</string>
    <string name="baby_tree">Baby Tree</string>
    <string name="hug">Hug</string>
    <string name="drop_egg">Drop Egg</string>
    <string name="writing_note">Writing Note</string>
    <string name="sulked_chick">Sulked Chick</string>
    <string name="a_creator">A Creator</string>
    <string name="an_angry_gift">An Angry Gift</string>
    <string name="cat_1">Cat 1</string>
    <string name="cat_2">Cat 2</string>
    <string name="cat_3">Cat 3</string>
    <string name="cat_4">Cat 4</string>
    <string name="duck_n0_emotion">Duck No Emotion</string>
    <string name="i_am_exercising">I am Exercising</string>
    <string name="lazy_cat">Lazy Cat</string>
    <string name="no_emotion">No Emotion</string>
    <string name="on_fire">On Fire</string>
    <string name="rabit">Rabit</string>
    <string name="try_to_stolen">Try To Stolen</string>
    <string name="what_the_heck">What the Heck</string>
    <string name="neko_dance">Neko Dance</string>
    <string name="mob_dumb">Mob Dumb</string>
    <string name="oishi">Oishi</string>
    <string name="sorry_sumimasen">Sorry Sumimasen</string>
    <string name="urushi_desu">Urushi Desu</string>
    <string name="yayyh">Yayh</string>
    <string name="mermaid_hello">Mermaid Hello</string>
    <string name="cartoon">Cartoon</string>
    <string name="te_he">Te He</string>
    <string name="is_that_you">Is That You</string>
    <string name="cause_you">Cause You</string>
    <string name="wahhh">Wahhh</string>
    <string name="fall_in_love">Fall In Love</string>
    <string name="clock_too_late">Clock To Late</string>
    <string name="housework_enjoy">Housework Enjoy</string>
    <string name="childhood_enjoy">Childhood Enjoy</string>
    <string name="madam_cool">Madam Cool</string>
    <string name="cute">Cute</string>
    <string name="no_frame">You Haven\'t Drawn any frame!</string>

</resources>