<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_radius_16dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/do_you_want_to_exit"
            android:textColor="#01C296"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:src="@drawable/img_exit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:text="@string/you_are_in_the_process_of_creating_a_project"
            android:textColor="#1F1E1E"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:id="@+id/btn_exit"
                android:layout_weight="1"
                android:background="@drawable/bg_radius_24dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:text="@string/exit"
                android:textAllCaps="true"
                android:textColor="#282828"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:id="@+id/btn_stay"
                android:layout_weight="1"
                android:background="@drawable/bg_radius_24dp"
                android:backgroundTint="#01C296"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:text="@string/stay"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>