<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.CreateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/i_ciel_cadena"
            android:text="@string/create_animation"
            android:textColor="#01C296"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_back"
            android:visibility="invisible" />
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/project_name"
        android:textColor="#212121"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_radius_56dp"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/enter_project_name"
        android:paddingHorizontal="16dp"
        android:paddingVertical="18dp"
        android:text="Animation 1"
        android:textColor="#333333"
        android:textColorHint="#80000000"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/animation_speed"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_radius_56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/btn_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_left" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/nb_speed"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            app:np_dividerColor="@color/black"
            app:np_dividerDistance="60dp"
            app:np_dividerThickness="1dp"
            app:np_fadingEdgeEnabled="false"
            app:np_itemSpacing="12dp"
            app:np_max="20"
            app:np_min="10"
            app:np_orientation="horizontal"
            app:np_scrollerEnabled="true"
            app:np_selectedTextColor="@color/black"
            app:np_selectedTextSize="16sp"
            app:np_textColor="#A7A7A7"
            app:np_textSize="16sp"
            app:np_textUnderline="true"
            app:np_value="6"
            app:np_wheelItemCount="3"
            app:np_wrapSelectorWheel="false" />

        <ImageView
            android:id="@+id/btn_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_right_2" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_create_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_radius_56dp"
        android:backgroundTint="#01C296"
        android:ellipsize="marquee"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:singleLine="true"
        android:text="@string/create_now"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>