<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:orientation="vertical"
    tools:context=".fragment.CreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/i_ciel_cadena"
            android:text="@string/app_name"
            android:textColor="#04A681"
            android:layout_marginEnd="8dp"
            android:textSize="24sp" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_freestyle"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_radius_16dp"
        android:paddingBottom="12dp"
        android:elevation="2dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/gl_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/img_freestyle"
            android:src="@drawable/img_freestyle"
            android:adjustViewBounds="true"
            android:layout_marginHorizontal="12dp"/>
        <TextView
            android:id="@+id/tv_content_freestyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/nunito_bold"
            android:textSize="14sp"
            android:maxLines="2"
            android:text="@string/content_free_style"
            android:textColor="#333333"
            app:layout_constraintEnd_toEndOf="@+id/gl_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_createnow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_radius_8dp"
            android:fontFamily="@font/nunito_bold"
            app:layout_constraintTop_toBottomOf="@+id/img_freestyle"
            android:text="@string/plus_create_now"
            android:layout_marginHorizontal="12dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:id="@+id/tv_createnow"
            android:backgroundTint="#01C296"
            android:paddingVertical="12dp"
            android:textSize="16sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_type_animation" />

</LinearLayout>