<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/lnBottomBar"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lnBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_radius_32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/btn_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/ic_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_create" />

            <TextView
                android:id="@+id/tv_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/nunito_medium"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/create_animation"
                android:textColor="#78838B"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_mycreation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/ic_mycreation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mycreation" />

            <TextView
                android:id="@+id/tv_mycreation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/nunito_medium"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/my_creation"
                android:textColor="#78838B"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/ic_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting" />

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/nunito_medium"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/setting"
                android:textColor="#78838B"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>