<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ShareAnimationActivity">

    <RelativeLayout
        android:id="@+id/ln_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/i_ciel_cadena"
            android:text="@string/create_animation"
            android:textColor="#01C296"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_home" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_radius_32dp"
        android:elevation="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginHorizontal="8dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp"
            android:background="@drawable/bg_radius_56dp"
            android:id="@+id/btn_save"
            android:gravity="center"
            android:backgroundTint="#FF9909">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_save"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:textSize="14sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginStart="4dp"
                android:textColor="@color/white"
                android:text="@string/save"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginHorizontal="8dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp"
            android:background="@drawable/bg_radius_56dp"
            android:id="@+id/btn_share"
            android:gravity="center"
            android:backgroundTint="#01C296">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:textSize="14sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:text="@string/share"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>